{{$NEXT}}

- Added support for the GeoIP Enterprise database.

2.002000 2015-06-29

- Added support for 'average_income' and 'population_density' in the
  Insights location record

- Minor optimizations in the type checks

- The is_anonymous_proxy() and is_satellite_provider() attributes on
  GeoIP2::Record::Traits have been deprecated. Please use our GeoIP2 Anonymous
  IP database to determine whether an IP address is used by an anonymizing
  service.


2.001003 2015-04-15

- Relaxed all database checks to accept more databases. This change has no
  effect for customers using currently released MaxMind databases.

- Replaced use of say in synopsis code so as to make it clear that this module
  works with Perl 5.8. Reported by Kevin Falcone. GitHub #12.


2.001002 2014-12-08

- Forgot to include Changes for 2.001001.


2.001001 2014-12-08

- Fixed a SYNOPSIS error in GeoIP2::Database::Reader. GitHub #11.


2.001000 2014-10-28

- Added support for the GeoIP2 Anonymous IP database. The
  GeoIP2::Database::Reader class now has an anonymous_ip() method which
  returns a GeoIP2::Model::AnonymousIP object.


2.000001 2014-09-22

- Removed beta notice from documentation.


2.000000 2014-09-22

- First production release.


0.050001 2014-09-17

- Relaxed city() database check to accept more databases. This change has no
  effect for customers using currently released MaxMind databases.


0.050000 2014-09-15

[BACKWARDS INCOMPATIBILITIES]

- The deprecated city_isp_org() and omni() methods have been removed. Also,
  the insights() on GeoIP2::Database::Reader has been removed.
- When looking up a private IP address in GeoIP2::Database::Reader, a
  GeoIP2::Error::Generic exception is now thrown by that class rather than
  relying on MaxMind::DB::Reader to throw an exception.
- The GeoIP2::Database::Reader lookup methods (e.g., city(), isp()) now throw
  a GeoIP2::Error::Generic if they are used with a database that does not